Add some models

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+jdbc.url=jdbc:postgresql://127.0.0.1:5432/new_cinema
+jdbc.username=postgres
+jdbc.password=password
+jdbc.driver=org.postgresql.Driver
